chore: upgrade to Java 21 (#1151)
Closes: MODINVSTOR-1364